; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/cart_hw/svp/extr_ssp16.c_write_STACK.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/cart_hw/svp/extr_ssp16.c_write_STACK.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@rSTACK = common dso_local global i32 0, align 4
@ssp = common dso_local global %struct.TYPE_2__* null, align 8
@EL_ANOMALY = common dso_local global i32 0, align 4
@EL_SVP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @write_STACK to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_STACK(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @rSTACK, align 4
  %4 = icmp sge i32 %3, 6
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  store i32 0, i32* @rSTACK, align 4
  br label %6

6:                                                ; preds = %5, %1
  %7 = load i32, i32* %2, align 4
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ssp, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = load i32, i32* @rSTACK, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* @rSTACK, align 4
  %13 = sext i32 %11 to i64
  %14 = getelementptr inbounds i32, i32* %10, i64 %13
  store i32 %7, i32* %14, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
